Mark as compatible with 1.19.1 and 1.19.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ modmenu_version = 4.0.0-beta.4
 cardinal_version = 3.0.0-nightly.1.17-pre1
 
 curseforge_project_id = 317856
-extra_game_versions =
+extra_game_versions = 1.19.1,1.19.2
