--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,5 +1,6 @@
 template.platform = fabric
-template.commonProject = common
+template.common_projects = common
+template.copy_aw_from = common
 template.producesReleaseArtifact = true
 template.usesDataGen = true
 
