--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ java_version = 17
 fabric_loader_version = 0.14.6
 
 container_library_artifact = container-library-1.18.2
-container_library_version = 1.4.0-beta.3
+container_library_version = 2.1.0-alpha.11
 modmenu_version = 3.2.3
 cardinal_version = 3.0.0-nightly.1.17-pre1
 
