--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -27,6 +27,6 @@ side = "BOTH"
 [[dependencies.expandedstorage]]
 modId = "ninjaphenix_container_lib"
 mandatory = true
-versionRange = "[1.4.0-beta.1,)"
+versionRange = "[2.1.0-alpha.11,)"
 ordering = "NONE"
 side = "BOTH"
