--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plugins/mod"]
 	path = plugins/mod
-	url = git@github.com:Ellemes/mod-gradle-plugin.git
+	url = git@codeberg.org:Ellemes/mod-gradle-plugin.git
