--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ archives_base_name = expandedstorage
 mod_version = 8.1.0-alpha.4
 mod_id = expandedstorage
 
-minecraft_version = 1.19.2
+minecraft_version = 22w43a
 java_version = 17
 
 fabric_loader_version = 0.14.10
-fabric_api_version = 0.66.0+1.19.2
+fabric_api_version = 0.65.2+1.19.3
 
 container_library_artifact = container-library-1.19
 container_library_version = 2.1.0-alpha.12
