Port quilt code.

--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -1,9 +1,9 @@
 template.platform = quilt
-template.common_projects = :thread,:common
+template.common_projects = :fabrica,:thread,:common
 template.copy_aw_from = :common
 template.producesReleaseArtifact = true
 template.usesDataGen = true
 
 quilt_loader_version = 0.17.6
-qsl_version = 4.0.0-alpha.2+22w43a
-fabric_api_version = 4.0.0-beta.19+0.64.0-1.19.2
+qsl_version = 4.0.0-alpha.3+22w43a
+fabric_api_version = 5.0.0-alpha.1+0.65.2-1.19.3
