Remove dependency on QFAPI as it doesn't work in dev, update container lib to prevent crash.

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ java_version = 17
 fabric_loader_version = 0.14.10
 fabric_api_version = 0.65.2+1.19.3
 
-container_library_artifact = container-library-1.19
+container_library_artifact = container-library-22w43a
 container_library_version = 2.1.0-alpha.12
 modmenu_version = 4.0.0-beta.4
 cardinal_version = 3.0.0-nightly.1.17-pre1
