--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,5 @@ cardinal_version = 3.0.0-nightly.1.17-pre1
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
-curseforge_version_override =
+curseforge_version_override = 1.20-Snapshot
 extra_game_versions =
