--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 modLoader = "javafml"
 loaderVersion = "[41,)"
 issueTrackerURL = "https://github.com/Ellemes/expanded-storage/issues/"
-license = "multiple"
+license = "See LICENSE file"
 
 [[mods]]
 modId = "expandedstorage"
