--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,14 @@ minecraft_version = 1.19
 java_version = 17
 
 fabric_loader_version = 0.14.6
+fabric_api_version = 0.66.0+1.19.2
 
 container_library_artifact = container-library-1.19
-container_library_version = 2.1.0-alpha.9
+container_library_version = 2.1.0-alpha.11
 modmenu_version = 4.0.0-beta.4
 cardinal_version = 3.0.0-nightly.1.17-pre1
 
+modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
+curseforge_version_override =
 extra_game_versions = 1.19.1,1.19.2
