--- a/thread/gradle.properties
+++ b/thread/gradle.properties
@@ -1,5 +1,3 @@
 template.platform = common
-template.common_projects = common
-template.copy_aw_from = common
-
-fabric_api_version = 0.55.1+1.19
+template.common_projects = :common
+template.copy_aw_from = :common
