--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ cardinal_version = 3.0.0-nightly.1.17-pre1
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
 curseforge_version_override =
-extra_game_versions = 1.19.1,1.19.2
+extra_game_versions =
