--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -4,6 +4,6 @@ template.copy_aw_from = :common
 template.producesReleaseArtifact = true
 template.usesDataGen = true
 
-quilt_loader_version = 0.17.0-beta.2
+quilt_loader_version = 0.17.6
 qsl_version = 3.0.0-beta.20+1.19.2
 fabric_api_version = 4.0.0-beta.19+0.64.0-1.19.2
