Remove fabrica project since quilt DFU api is :crab:

--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -1,5 +1,5 @@
 template.platform = forge
-template.common_projects = :fabrica,:common
+template.common_projects = :common
 template.copy_aw_from = :common
 template.producesReleaseArtifact = true
 template.usesDataGen = true
