--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -1,5 +1,5 @@
 template.platform = quilt
-template.common_projects = :fabrica,:thread,:common
+template.common_projects = :thread,:common
 template.copy_aw_from = :common
 template.producesReleaseArtifact = true
 template.usesDataGen = true
