--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -1,9 +1,9 @@
 template.platform = quilt
-template.common_projects = :thread,:common
-template.copy_aw_from = :common
+template.common_projects = thread,common
+template.copy_aw_from = common
 template.producesReleaseArtifact = true
 template.usesDataGen = true
 
 quilt_loader_version = 0.17.6
 qsl_version = 3.0.0-beta.20+1.19.2
-fabric_api_version = 4.0.0-beta.19+0.64.0-1.19.2
+quilted_fabric_api_version = 4.0.0-beta.19+0.64.0-1.19.2
