Prep for release

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs = -Xmx2048M
 archives_base_name = expandedstorage
-mod_version = 8.1.0-tracking.7
+mod_version = 8.1.0-beta.3
 mod_id = expandedstorage
 
 minecraft_version = 1.19.2
