--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -5,5 +5,5 @@ template.producesReleaseArtifact = true
 template.usesDataGen = true
 
 quilt_loader_version = 0.17.6
-qsl_version = 4.0.0-alpha.3+22w43a
+qsl_version = 4.0.0-alpha.4+1.19.3-rc1
 quilted_fabric_api_version = 5.0.0-alpha.1+0.65.2-1.19.3
