--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ archives_base_name = expandedstorage
 mod_version = 9.0.0-alpha.1
 mod_id = expandedstorage
 
-minecraft_version = 22w43a
+minecraft_version = 1.19.3-rc1
 java_version = 17
 
 # Common Dependencies
@@ -12,7 +12,7 @@ ipn_minecraft_version = 1.19.2
 
 # Thread Dependencies
 fabric_loader_version = 0.14.10
-fabric_api_version = 0.65.2+1.19.3
+fabric_api_version = 0.68.1+1.19.3
 modmenu_version = 4.1.1
 cardinal_version = 5.0.2
 rei_version = 9.1.577
