--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ mod_version = 9.0.0-alpha.1
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/Ellemes/expanded-storage
 
-minecraft_version = 1.19.3-rc1
+minecraft_version = 1.19.3
 java_version = 17
 
 # Common Dependencies
@@ -12,8 +12,8 @@ ipn_version = 1.8.5
 ipn_minecraft_version = 1.19.2
 
 # Thread Dependencies
-fabric_loader_version = 0.14.10
-fabric_api_version = 0.68.1+1.19.3
+fabric_loader_version = 0.14.12
+fabric_api_version = 0.71.0+1.19.3
 modmenu_version = 4.1.1
 cardinal_version = 5.0.2
 rei_version = 9.1.577
