--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -4,6 +4,6 @@ template.copy_aw_from = common
 template.producesReleaseArtifact = true
 template.usesDataGen = true
 
-quilt_loader_version = 0.17.6
-qsl_version = 4.0.0-alpha.4+1.19.3-rc1
-quilted_fabric_api_version = 5.0.0-alpha.1+0.65.2-1.19.3
+quilt_loader_version = 0.17.8
+qsl_version = 4.0.0-beta.3+1.19.3
+quilted_fabric_api_version = 5.0.0-alpha.7+0.70.0-1.19.3
