--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.jvmargs = -Xmx2048M
 archives_base_name = expandedstorage
 mod_version = 8.1.0-beta.3
 mod_id = expandedstorage
+repo_base_url = https://gitlab.com/Ellemes/expanded-storage
 
 minecraft_version = 1.19.2
 java_version = 17
