Some changes from 1.18.2 refactor.

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license = "See LICENSE file"
 modId = "expandedstorage"
 version = "${version}"
 displayName = "Expanded Storage"
-authors = "Ellemes"
+authors = "Bucket of Compasses"
 logoFile = "icon.png"
 
 [[dependencies.expandedstorage]]
