--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,15 @@
-org.gradle.jvmargs = -Xmx2048M
+org.gradle.jvmargs = -Xmx4096M
 archives_base_name = expandedstorage
-mod_version = 8.1.0-alpha.7
+mod_version = 8.1.0-beta.4
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/Ellemes/expanded-storage
 
 minecraft_version = 1.18.2
 java_version = 17
 
-# Common Dependencies
-ipn_version = 1.3.5
-ipn_minecraft_version = 1.18.2
-
 # Thread Dependencies
 fabric_loader_version = 0.14.9
 fabric_api_version = 0.67.0+1.18.2
-modmenu_version = 3.2.3
-cardinal_version = 5.1.0
-rei_version = 7.3.443
-amecs_version = 1.3.8+mc.1.18.2
-arrp_version = 0.5.5
-flan_version = 1.7.4
-emi_version = 0.4.3+1.18.2
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
