--- a/gradle.properties
+++ b/gradle.properties
@@ -1,27 +1,17 @@
-org.gradle.jvmargs = -Xmx2048M
+org.gradle.jvmargs = -Xmx4096M
 archives_base_name = expandedstorage
-mod_version = 9.0.0-alpha.2
+mod_version = 9.0.0-alpha.3
 mod_id = expandedstorage
-repo_base_url = https://gitlab.com/Ellemes/expanded-storage
+repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
 minecraft_version = 1.19.3
 java_version = 17
 
-# Common Dependencies
-ipn_version = 1.8.5
-ipn_minecraft_version = 1.19.2
-
 # Thread Dependencies
 fabric_loader_version = 0.14.12
 fabric_api_version = 0.71.0+1.19.3
-modmenu_version = 4.1.1
-cardinal_version = 5.0.2
-rei_version = 9.1.577
-amecs_version = 1.3.8+mc.1.19-rc2
-flan_version = 1.7.9
-emi_version = 0.4.3+1.19
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
-curseforge_version_override = 1.20-Snapshot
+curseforge_version_override =
 extra_game_versions =
