--- a/.editorconfig
+++ b/.editorconfig
@@ -33,7 +33,6 @@ ij_json_keep_indents_on_empty_lines = false
 ij_json_keep_line_breaks = true
 ij_json_keep_trailing_comma = false
 ij_json_object_wrapping = normal
-ij_json_property_alignment = align_on_value
 ij_json_space_after_colon = true
 ij_json_space_after_comma = true
 ij_json_space_before_colon = false
@@ -41,6 +40,9 @@ ij_json_space_before_comma = false
 ij_json_spaces_within_braces = false
 ij_json_spaces_within_brackets = false
 ij_json_wrap_long_lines = false
+
+[**/lang/*.json]
+ij_json_property_alignment = align_on_value
 
 [.editorconfig]
 ij_editorconfig_align_group_field_declarations = true
