--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ mod_version = 9.0.0-alpha.3
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
-minecraft_version = 23w07a
+minecraft_version = 1.19.4-pre2
 parchment_version = 1.19.3:2023.02.26
 java_version = 17
 
 # Thread Dependencies
 fabric_loader_version = 0.14.14
-fabric_api_version = 0.74.1+1.19.4
+fabric_api_version = 0.75.2+1.19.4
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
