Backport some 1.19.4 changes.

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
 minecraft_version = 1.19.3
+parchment_version = 1.19.3:2023.02.26
 java_version = 17
 
 # Thread Dependencies
