--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -5,5 +5,5 @@ template.producesReleaseArtifact = true
 template.usesDataGen = true
 
 quilt_loader_version = 0.18.2
-qsl_version = 4.0.0-beta.3+1.19.3
+qsl_version = 5.0.0-alpha.1+1.19.4-pre3
 quilted_fabric_api_version = 5.0.0-alpha.7+0.70.0-1.19.3
