--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -5,5 +5,5 @@ template.producesReleaseArtifact = true
 template.usesDataGen = true
 
 quilt_loader_version = 0.18.3
-qsl_version = 5.0.0-alpha.2+1.19.4-pre3
-quilted_fabric_api_version = 6.0.0-alpha.1+0.75.2-1.19.4
+qsl_version = 5.0.0-beta.1+1.19.4
+quilted_fabric_api_version = 6.0.0-beta.2+0.76.0-1.19.4
