--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ ij_java_align_multiline_chained_methods     = true
 ij_java_use_single_class_imports            = true
 ij_java_class_count_to_use_import_on_demand = 999
 ij_java_names_count_to_use_import_on_demand = 999
-ij_java_packages_to_use_import_on_demand    = unset
+ij_java_packages_to_use_import_on_demand    = true
 
 [*.properties]
 ij_properties_align_group_field_declarations    = true
