"rebase" 1.20 specific changes onto 1.19.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs = -Xmx4096M
 archives_base_name = expandedstorage
-mod_version = 9.0.0-beta.2
+mod_version = 10.0.0-alpha.1
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
-minecraft_version = 1.19.4
-parchment_version = 1.19.3:2023.02.26
+minecraft_version = 23w12a
+parchment_version = 1.19.3:2023.03.12
 java_version = 17
 
 # Thread Dependencies
-fabric_loader_version = 0.14.14
-fabric_api_version = 0.76.0+1.19.4
+fabric_loader_version = 0.14.18
+fabric_api_version = 0.76.1+1.20
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
-curseforge_version_override =
+curseforge_version_override = 1.20-Snapshot
 extra_game_versions =
