--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ mod_version = 10.0.0-alpha.1
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
-minecraft_version = 23w18a
+minecraft_version = 1.20-pre1
 parchment_version = 1.19.3:2023.03.12
 java_version = 17
 
 # Thread Dependencies
 fabric_loader_version = 0.14.19
-fabric_api_version = 0.80.1+1.20
+fabric_api_version = 0.80.2+1.20
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
