--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -6,4 +6,4 @@ template.usesDataGen = true
 
 quilt_loader_version = 0.18.6
 qsl_version = 6.0.0-alpha.2+1.20-pre1
-quilted_fabric_api_version = 6.0.0-beta.2+0.76.0-1.19.4
+quilted_fabric_api_version = 7.0.0-alpha.3+compasses+local-0.80.3-1.20
