--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -5,5 +5,5 @@ template.producesReleaseArtifact = true
 template.usesDataGen = true
 
 quilt_loader_version = 0.18.6
-qsl_version = 6.0.0-alpha.2+1.20-pre1
-quilted_fabric_api_version = 7.0.0-alpha.3+compasses+local-0.80.3-1.20
+qsl_version = 6.0.0-alpha.3+1.20-pre5
+quilted_fabric_api_version = 7.0.0-alpha.1+0.81.3-1.20
