--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,7 @@
 org.gradle.jvmargs = -Xmx4096M
+
+template.generate_ide_configs = false
+
 archives_base_name = expandedstorage
 mod_version = 9.0.3
 mod_id = expandedstorage
