--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx4096M
 template.generate_ide_configs = false
 
 archives_base_name = expandedstorage
-mod_version = 10.0.0-alpha.4
+mod_version = 10.0.0-beta.1
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
@@ -17,5 +17,5 @@ fabric_api_version = 0.82.1+1.20
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
-curseforge_version_override = 1.20-Snapshot
+curseforge_version_override =
 extra_game_versions =
