--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ mod_version = 10.0.0-beta.2
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
-minecraft_version = 1.20-rc1
+minecraft_version = 1.20
 parchment_version = 1.19.3:2023.03.12
 java_version = 17
 
