--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -5,5 +5,5 @@ template.producesReleaseArtifact = true
 template.usesDataGen = true
 
 quilt_loader_version = 0.18.6
-qsl_version = 6.0.0-alpha.6+1.20-rc1
-quilted_fabric_api_version = 7.0.0-alpha.4+0.83.0-1.20
+qsl_version = 6.0.1+1.20
+quilted_fabric_api_version = 7.0.1+0.83.0-1.20
