Add 1.20.1 as extra version in publishing code. -Compasses

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ fabric_api_version = 0.82.1+1.20
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
 curseforge_version_override =
-extra_game_versions =
+extra_game_versions = 1.20.1
