Update gradle plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 org.gradle.jvmargs = -Xmx4096M
 
 template.generate_ide_configs = false
+template.uses_split_sourcesets = false
 
 archives_base_name = expandedstorage
 mod_version = 10.0.0-beta.3
