--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,13 @@ mod_version = 10.1.0-alpha.1
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
-minecraft_version = 1.20.1
+minecraft_version = 23w32a
 parchment_version = 1.20.1:2023.07.02
 java_version = 17
 
 # Thread Dependencies
-fabric_loader_version = 0.14.21
-fabric_api_version = 0.84.0+1.20.1
+fabric_loader_version = 0.14.22
+fabric_api_version = 0.86.2+1.20.2
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
