--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx4096M
 template.generate_ide_configs = false
 
 archives_base_name = expandedstorage
-mod_version = 10.1.0-alpha.1
+mod_version = 11.0.0-alpha.1
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
@@ -17,5 +17,5 @@ fabric_api_version = 0.86.2+1.20.2
 
 modrinth_project_id = F56tBubk
 curseforge_project_id = 317856
-curseforge_version_override =
+curseforge_version_override = 1.20.2-Snapshot
 extra_game_versions =
