--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs = -Xmx4096M
 template.generate_ide_configs = false
 
 archives_base_name = expandedstorage
-mod_version = 11.0.0
+mod_version = 12.0.0
 mod_id = expandedstorage
 repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
 
-minecraft_version = 1.20.2
+minecraft_version = 1.20.3-pre4
 parchment_version = 1.20.1:2023.07.02
 java_version = 17
 
 # Thread Dependencies
-fabric_loader_version = 0.14.22
-fabric_api_version = 0.90.7+1.20.2
+fabric_loader_version = 0.14.23
+fabric_api_version = 0.91.1+1.20.3
 
 modrinth_project_id = F56tBubk
