--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ archives_base_name = expandedstorage
 
 mod_version = 12.0.0
 mod_id = expandedstorage
-repo_base_url = https://gitlab.com/BucketOfCompasses/expanded-storage
+repo_base_url = https://github.com/CompassSystem/expanded-storage
 
 minecraft_version = 1.20.4
 parchment_version = 1.20.2:2023.12.10
